made a name change to id for correct jumping

--- a/styles/portfolio-stylesheet.css
+++ b/styles/portfolio-stylesheet.css
@@ -10,9 +10,7 @@
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: @screen-lg-min) { ... }
 
-var shiftWindow = function() { scrollBy(0, -50) };
-if (location.hash) shiftWindow();
-window.addEventListener("hashchange", shiftWindow);
+
 
 .json{
   height:200px;
@@ -131,7 +129,7 @@ h4{
 .resume{
   min-width: 100%;
   padding-top:1em;
-  padding-bottom: 1em;
+  padding-bottom: 2em;
   margin-top: 2em;
  background-image:
   linear-gradient(45deg,
